<resources>
    <string name="app_name">ServeIt</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>


    <string name="category_1">Cat 1</string>
    <string name="category_2">Cat 2</string>
    <string name="category_3">Cat 3</string>
    <string name="title_activity_stats_page">stats_page</string>


    <string name="stats_1">Daily</string>
    <string name="stats_2">Weekly</string>
    <string name="stats_3">Monthly</string>

    <string-array name="User_choice">
        <item>Owner</item>
        <item>Employee</item>
    </string-array>

    <string name="question_emp1">How can create a new order?</string>
    <string name="question_emp2">How can I change a table\'s status?</string>
    <string name="question_emp3">When do I know an order is ready to serve?</string>
    <string name="question_emp4">I left my job! Help!</string>

    <string name="question_own1">How can I add tables to my store?</string>
    <string name="question_own2">How can I add a menu to my store?</string>
    <string name="question_own3">How can I invite my employees to my store?</string>
    <string name="question_own4">An employee left the job. How can I kick him out?</string>
    <string name="question_own5">Can I change my store name / enter code?</string>

    <string name="common_1">I have suggestion / found a bug!</string>
    <string name="common_2">I don\'t want to use the app anymore.</string>


    <string name="answer_emp1">
        Simply click on the table which you want to make the order for
        and you will be redirected to the order screen.
    </string>

    <string name="answer_emp2">
        Tables\' status change automatically when the order is taken (yellow color)
        and then when the order is delivered (green color) and finally back to grey when
        the table has no active customers.
    </string>

    <string name="answer_emp3">
        A notification will appear on your phone screen letting you know which order
        is ready to be served.
    </string>

    <string name="answer_emp4">
        Well thats unfortunate!\nDon\'t worry you can still use the same account just click the option "Leave workspace"
        in your settings and you will be redirected to a new page where you can join your new store
        that you are working.
    </string>

    <string name="answer_own1">
        You can add tables by going to Table layout and clicking the rounded button at bottom right of your screen.
    </string>

    <string name="answer_own2">
        You can add your store\'s menu by adding different categories using the rounded button and then click + on each category
        to add items into it.
    </string>

    <string name="answer_own3">
        Currently employees can join by entering the store\'s password so to invite an employee tell them the password and they
        will be able to join.
    </string>

    <string name="answer_own4">
        You can kick employees out of the store anytime in the manage staff page. You can see a full list of who is working
        for you and the date they joined
    </string>

    <string name="answer_own5">
        Changing store settings is available in your settings page. Currently you can change your store\'s name, enter code
        and currency
    </string>

    <string name="answer_com1">
        You can contact us through the contact section in your settings.\nWe appreciate your effort trying to make
        the application better!
    </string>

    <string name="answer_com2">
        When you decide you no longer need the app you can request a deletion of your account by clicking the
        corresponding row in settings
    </string>
</resources>
