<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_view"
    android:orientation="vertical"
    android:background="?attr/bgColor"
    tools:context=".employee_activities.help_employee">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/help_border"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="118dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:gravity="center_vertical"
                    android:text="1"
                    android:textColor="?secondaryTxtColor"
                    android:textSize="50sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/question_emp1"
                        android:textColor="?secondaryTxtColor" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?borderColor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/answer_emp1"
                        android:textColor="?txtColor" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/help_border"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:gravity="center_vertical"
                    android:text="2"
                    android:textColor="?secondaryTxtColor"
                    android:textSize="50sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/question_emp2"
                        android:textColor="?secondaryTxtColor" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?borderColor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/answer_emp2"
                        android:textColor="?txtColor" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/help_border"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:gravity="center_vertical"
                    android:text="3"
                    android:textColor="?secondaryTxtColor"
                    android:textSize="50sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/question_emp3"
                        android:textColor="?secondaryTxtColor" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?borderColor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/answer_emp3"
                        android:textColor="?txtColor" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/help_border"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:gravity="center_vertical"
                    android:text="4"
                    android:textColor="?secondaryTxtColor"
                    android:textSize="50sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/question_emp4"
                        android:textColor="?secondaryTxtColor" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?borderColor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/answer_emp4"
                        android:textColor="?txtColor" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/help_border"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:gravity="center_vertical"
                    android:text="5"
                    android:textColor="?secondaryTxtColor"
                    android:textSize="50sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/common_1"
                        android:textColor="?secondaryTxtColor" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?borderColor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="?txtColor" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/help_border"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="20dp"
                    android:gravity="center_vertical"
                    android:text="6"
                    android:textColor="?secondaryTxtColor"
                    android:textSize="50sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/common_2"
                        android:textColor="?secondaryTxtColor" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?borderColor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"

                        android:textColor="?txtColor" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>



</ScrollView>